--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install Cowsay
+      run: apt install -y cowsay
+    - name: install fortune
+      run: apt install -y fortune
+        
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
