--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,9 +26,10 @@ jobs:
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Install Cowsay
-      run: apt install -y cowsay
+      run: apt-get install -y cowsay
+      
     - name: install fortune
-      run: apt install -y fortune
+      run: apt-get install -y fortune
         
     - name: Lint with flake8
       run: |
